--- a/bower.json
+++ b/bower.json
@@ -82,5 +82,8 @@
   "resolutions": {
     "jquery": "^2.2.3",
     "fastclick": "^1.0.6"
+  },
+  "dependencies": {
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47"
   }
 }
